<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_setup"
        android:enabled="true"
        android:showAsAction="never"
        android:title="@string/setupmenu"
        android:visible="true"/>
    <item android:id="@+id/action_refresh" android:enabled="true" android:showAsAction="never" android:title="@string/refresh" android:visible="true" /><item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:visible="true"/>
    
    <item
        android:id="@+id/action_credits"
        android:enabled="true"
        android:showAsAction="never"
        android:title="@string/title_activity_credit"
        android:visible="false"/>

</menu>