<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/title"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/selectable_background_cardbank"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imageView_ct"
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginRight="4dp"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            android:src="@drawable/example_picture"
            android:visibility="gone" />

        <TextView
            android:id="@+id/description"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="7"
            android:text="@string/example_text" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/card_part_progress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressBar00"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/progressStartLabel"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/progressEndLabel"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_part_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/map"
            android:scaleType="centerCrop"
            android:src="@drawable/example_picture" />
    </RelativeLayout>

</LinearLayout>